--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Flask==2.3.2
 Flask-Login==0.6.2
 Flask-Migrate==4.0.4
 flask-sqlalchemy==3.0.5
+Flask-WTF==1.1.1
 greenlet==2.0.2
 importlib-metadata==6.7.0
 importlib-resources==5.12.0
@@ -15,4 +16,5 @@ MarkupSafe==2.1.3
 SQLAlchemy==2.0.17
 typing-extensions==4.6.3
 Werkzeug==2.3.6
+WTForms==3.0.1
 zipp==3.15.0
